# LearningOpenCV

./: CMakeLists.txt  Demo.cpp  Demo.h  Learning.cpp  Learning.h  main.cpp  sdhj.txt
